<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/yq_tbd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/yq_w"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="#25C6CB"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/invite_money_margin_top"
                android:src="@drawable/yq_xt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/invite_and_share"
                android:textColor="#25C6CB"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/invite_money_margin_top_1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="@dimen/invite_money_padding"
                    android:paddingRight="@dimen/invite_money_padding"
                    android:text="@string/money_15_yuan"
                    android:textColor="#25C6CB"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/invite_money_padding"
                    android:paddingStart="@dimen/invite_money_padding"
                    android:text="@string/invite_succeed"
                    android:textColor="#25C6CB"
                    android:textSize="14sp" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/yq_hy"
            android:gravity="center"
            android:text="@string/friend"
            android:textColor="#27E4B4"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/invite_money_margin_top_2"
        android:scaleType="fitXY"
        android:src="@drawable/yq_ym" />

</LinearLayout>