<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_eaeaea"
            android:fadingEdge="none"
            android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/color_eaeaea"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/question_analysis"
            android:textColor="#333333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_sum_up_enter_1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:gravity="top|left"
            android:hint="@string/question_analysis_hint"
            android:padding="16dp"
            android:textSize="@dimen/text_12sp"/>

        <TextView
            android:id="@+id/tv_sum_up_text_count_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="16dp"
            android:background="#ffffff"
            android:text="0/200"
            android:textColor="@color/btn_gray_normal"/>


        <TextView
            android:id="@+id/tv_3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/color_eaeaea"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/question_avavice"
            android:textColor="#333333"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_sum_up_enter_3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:gravity="top|left"
            android:hint="@string/question_avavice_hint"
            android:padding="16dp"
            android:textSize="@dimen/text_12sp"/>

        <TextView
            android:id="@+id/tv_sum_up_text_count_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="16dp"
            android:background="#ffffff"
            android:text="0/200"
            android:textColor="@color/btn_gray_normal"/>

    </LinearLayout>


</ScrollView>