<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/marght_8dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp16">
        <TextView
            android:id="@+id/tv_card_number_str"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/c333"
            android:textSize="@dimen/text_14sp"
            android:gravity="right|center_vertical"
            android:layout_gravity="center_horizontal"
            tools:text="卡卡号"/>
        <EditText
            android:id="@+id/et_card_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp12"
            android:hint="@string/bank_card_hint_str"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/c999"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp05"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/c333"
            android:textSize="@dimen/text_14sp"
            android:gravity="right|center_vertical"
            android:layout_gravity="center_horizontal"
            android:text="开户行"/>
        <EditText
            android:id="@+id/et_card_dress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp12"
            android:hint="@string/bank_card_hint_str2"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/c999"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp05"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/c333"
            android:textSize="@dimen/text_14sp"
            android:gravity="right|center_vertical"
            android:layout_gravity="center_horizontal"
            android:text="开户人"/>
        <EditText
            android:id="@+id/et_card_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp12"
            android:hint="@string/bank_card_hint_str3"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/c999"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp05"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/c333"
            android:textSize="@dimen/text_14sp"
            android:gravity="right|center_vertical"
            android:layout_gravity="center_horizontal"
            android:text="身份证"/>
        <EditText
            android:id="@+id/et_card_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp12"
            android:hint="@string/bank_card_hint_str4"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/c999"
            android:background="@null"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:text="@string/instruction"/>
    <TextView
        android:id="@+id/tv_instruction_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8"
        android:textSize="@dimen/text_12sp"
        tools:text="1.XXXXXXXX"/>
    <TextView
        android:id="@+id/tv_instruction_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp12"
        android:textSize="@dimen/text_12sp"
        tools:text="2.XXXXXXXX"/>
</LinearLayout>